--- a/clients/ios/Interfaces/OtherDetailViewController.xib
+++ b/clients/ios/Interfaces/OtherDetailViewController.xib
@@ -50,7 +50,7 @@
 						<string key="NSFrame">{{150, 208}, {20, 20}}</string>
 						<reference key="NSSuperview" ref="269090794"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="762356062"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:948</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -444,13 +444,142 @@
 						<reference key="IBUIBackgroundColor" ref="607888386"/>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
-					<object class="IBUIView" id="762356062">
+					<object class="IBUIView" id="281892938">
 						<reference key="NSNextResponder" ref="269090794"/>
 						<int key="NSvFlags">301</int>
+						<object class="NSMutableArray" key="NSSubviews">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBUILabel" id="935763467">
+								<reference key="NSNextResponder" ref="281892938"/>
+								<int key="NSvFlags">268</int>
+								<string key="NSFrame">{{199, 32}, {50, 16}}</string>
+								<reference key="NSSuperview" ref="281892938"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="339337961"/>
+								<string key="NSReuseIdentifierKey">_NS:311</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">7</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<string key="IBUIText">Stamp</string>
+								<object class="NSColor" key="IBUITextColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MC42IDAuNiAwLjYAA</bytes>
+								</object>
+								<nil key="IBUIHighlightedColor"/>
+								<int key="IBUIBaselineAdjustment">1</int>
+								<float key="IBUIMinimumFontSize">10</float>
+								<int key="IBUITextAlignment">1</int>
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="223231950">
+									<string key="name">Helvetica-Bold</string>
+									<string key="family">Helvetica</string>
+									<int key="traits">2</int>
+									<double key="pointSize">10</double>
+								</object>
+								<object class="NSFont" key="IBUIFont" id="333951273">
+									<string key="NSName">Helvetica-Bold</string>
+									<double key="NSSize">10</double>
+									<int key="NSfFlags">16</int>
+								</object>
+							</object>
+							<object class="IBUILabel" id="339337961">
+								<reference key="NSNextResponder" ref="281892938"/>
+								<int key="NSvFlags">268</int>
+								<string key="NSFrame">{{71, 32}, {50, 16}}</string>
+								<reference key="NSSuperview" ref="281892938"/>
+								<reference key="NSWindow"/>
+								<string key="NSReuseIdentifierKey">_NS:311</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">7</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<string key="IBUIText">To-Do</string>
+								<object class="NSColor" key="IBUITextColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MC42IDAuNiAwLjYAA</bytes>
+								</object>
+								<nil key="IBUIHighlightedColor"/>
+								<int key="IBUIBaselineAdjustment">1</int>
+								<float key="IBUIMinimumFontSize">10</float>
+								<int key="IBUITextAlignment">1</int>
+								<reference key="IBUIFontDescription" ref="223231950"/>
+								<reference key="IBUIFont" ref="333951273"/>
+							</object>
+							<object class="IBUIButton" id="818496907">
+								<reference key="NSNextResponder" ref="281892938"/>
+								<int key="NSvFlags">268</int>
+								<string key="NSFrame">{{59, 0}, {80, 49}}</string>
+								<reference key="NSSuperview" ref="281892938"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="866408155"/>
+								<bool key="IBUIOpaque">NO</bool>
+								<int key="IBUIContentMode">1</int>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<int key="IBUIContentHorizontalAlignment">0</int>
+								<int key="IBUIContentVerticalAlignment">0</int>
+								<reference key="IBUIHighlightedTitleColor" ref="746620041"/>
+								<object class="NSColor" key="IBUINormalTitleColor" id="344575681">
+									<int key="NSColorSpace">3</int>
+									<bytes key="NSWhite">MC42NjY2NjY2NjY3AA</bytes>
+								</object>
+								<reference key="IBUINormalTitleShadowColor" ref="111098176"/>
+								<object class="NSCustomResource" key="IBUIHighlightedImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">toolbar_todoButton_highlighted.png</string>
+								</object>
+								<object class="NSCustomResource" key="IBUISelectedImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">toolbar_todoButton_selected.png</string>
+								</object>
+								<object class="NSCustomResource" key="IBUINormalImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">toolbar_todoButton.png</string>
+								</object>
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="907714416">
+									<string key="name">HelveticaNeue-Bold</string>
+									<string key="family">Helvetica Neue</string>
+									<int key="traits">2</int>
+									<double key="pointSize">10</double>
+								</object>
+								<object class="NSFont" key="IBUIFont" id="386112943">
+									<string key="NSName">HelveticaNeue-Bold</string>
+									<double key="NSSize">10</double>
+									<int key="NSfFlags">16</int>
+								</object>
+							</object>
+							<object class="IBUIButton" id="866408155">
+								<reference key="NSNextResponder" ref="281892938"/>
+								<int key="NSvFlags">268</int>
+								<string key="NSFrame">{{184, 0}, {80, 49}}</string>
+								<reference key="NSSuperview" ref="281892938"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="935763467"/>
+								<bool key="IBUIOpaque">NO</bool>
+								<int key="IBUIContentMode">1</int>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<int key="IBUIContentHorizontalAlignment">0</int>
+								<int key="IBUIContentVerticalAlignment">0</int>
+								<reference key="IBUIHighlightedTitleColor" ref="746620041"/>
+								<reference key="IBUINormalTitleColor" ref="344575681"/>
+								<reference key="IBUINormalTitleShadowColor" ref="111098176"/>
+								<object class="NSCustomResource" key="IBUIHighlightedImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">toolbar_stampButton_highlighted.png</string>
+								</object>
+								<object class="NSCustomResource" key="IBUINormalImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">toolbar_stampButton.png</string>
+								</object>
+								<reference key="IBUIFontDescription" ref="907714416"/>
+								<reference key="IBUIFont" ref="386112943"/>
+							</object>
+						</object>
 						<string key="NSFrame">{{0, 367}, {320, 49}}</string>
 						<reference key="NSSuperview" ref="269090794"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSNextKeyView" ref="818496907"/>
 						<reference key="IBUIBackgroundColor" ref="746620041"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -670,7 +799,7 @@
 							<reference ref="1056326026"/>
 							<reference ref="1008158405"/>
 							<reference ref="881813672"/>
-							<reference ref="762356062"/>
+							<reference ref="281892938"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -827,10 +956,39 @@
 						<string key="objectName">Main Action Label</string>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">123</int>
-						<reference key="object" ref="762356062"/>
+						<int key="objectID">124</int>
+						<reference key="object" ref="281892938"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="935763467"/>
+							<reference ref="339337961"/>
+							<reference ref="818496907"/>
+							<reference ref="866408155"/>
+						</object>
 						<reference key="parent" ref="269090794"/>
 						<string key="objectName">Toolbar</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">125</int>
+						<reference key="object" ref="935763467"/>
+						<reference key="parent" ref="281892938"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">126</int>
+						<reference key="object" ref="339337961"/>
+						<reference key="parent" ref="281892938"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">127</int>
+						<reference key="object" ref="818496907"/>
+						<reference key="parent" ref="281892938"/>
+						<string key="objectName">Button - Add to favorites</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">128</int>
+						<reference key="object" ref="866408155"/>
+						<reference key="parent" ref="281892938"/>
+						<string key="objectName">Button - Restamp</string>
 					</object>
 				</object>
 			</object>
@@ -848,8 +1006,16 @@
 					<string>115.IBPluginDependency</string>
 					<string>116.IBPluginDependency</string>
 					<string>117.IBPluginDependency</string>
-					<string>123.CustomClassName</string>
-					<string>123.IBPluginDependency</string>
+					<string>124.CustomClassName</string>
+					<string>124.IBPluginDependency</string>
+					<string>125.IBPluginDependency</string>
+					<string>126.IBPluginDependency</string>
+					<string>127.IBPluginDependency</string>
+					<string>127.IBUIButtonInspectorSelectedEdgeInsetMetadataKey</string>
+					<string>127.IBUIButtonInspectorSelectedStateConfigurationMetadataKey</string>
+					<string>128.IBPluginDependency</string>
+					<string>128.IBUIButtonInspectorSelectedEdgeInsetMetadataKey</string>
+					<string>128.IBUIButtonInspectorSelectedStateConfigurationMetadataKey</string>
 					<string>49.IBPluginDependency</string>
 					<string>49.IBUserGuides</string>
 					<string>50.IBPluginDependency</string>
@@ -883,6 +1049,14 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>STToolbar</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<real value="2"/>
+					<real value="2"/>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<real value="2"/>
+					<real value="1"/>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSArray">
 						<bool key="EncodedWithXMLCoder">YES</bool>
@@ -939,7 +1113,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">123</int>
+			<int key="maxID">128</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1174,6 +1348,11 @@
 				<string>main_action_button_bg@2x.png</string>
 				<string>map_inner_shadow.png</string>
 				<string>shelf_background.png</string>
+				<string>toolbar_stampButton.png</string>
+				<string>toolbar_stampButton_highlighted.png</string>
+				<string>toolbar_todoButton.png</string>
+				<string>toolbar_todoButton_highlighted.png</string>
+				<string>toolbar_todoButton_selected.png</string>
 			</object>
 			<object class="NSMutableArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
@@ -1183,6 +1362,11 @@
 				<string>{11, 50}</string>
 				<string>{16, 16}</string>
 				<string>{320, 365}</string>
+				<string>{52, 48}</string>
+				<string>{52, 48}</string>
+				<string>{52, 48}</string>
+				<string>{52, 48}</string>
+				<string>{52, 48}</string>
 			</object>
 		</object>
 		<string key="IBCocoaTouchPluginVersion">933</string>
